<resources>
    <string name="app_name">TestIqnect</string>
    <string name="hello_world">Hello world!</string>
    <string name="password">Password</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_description">Start scanning participating magazines, videos and outdoor billboards to receive exclusive content</string>
    <string name="welcome_iqnect">Welcome to iQnect</string>
    <string name="convenience_title">Convenience on the go</string>
    <string name="convenience_description">Buy products, watch videos and save coupons conveniently in the app</string>
    <string name="skip">Skip</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="sign_up_desc">Create an account or log in now to access full features</string>
    <string name="log_in">Log in</string>
    <string name="log_in_desc">Log in now to access full features</string>
    <string name="already_account">Already have an account?</string>
    <string name="facebook">Sign up with Facebook</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="last_step">Last Step</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="last_step_desc">A few more details about yourself and we are good to go</string>
    <string name="invalid_email">Oops! Your email seems to be invalid</string>
    <string name="invalid_pwd">Oops! You left your password blank</string>
    <string name="scanner">Scanner</string>
    <string name="coupons">Coupons</string>
    <string name="history">History</string>
    <string name="account">Account</string>
    <string name="more">More</string>




    <string-array
        name="gender_array">
        <item>@string/female</item>
        <item>@string/male</item>
    </string-array>

</resources>
