<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/BoardingSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/skip" />


        <TextView
            style="@style/BoardingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/sign_up_now" />

        <TextView
            style="@style/BoardingDescrption"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:letterSpacing="0.05"
            android:text="@string/sign_up_desc" />


        <android.support.design.widget.TextInputLayout
            style="@style/StyledTilEditTextLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            app:hintTextAppearance="@style/BoardingEditTextFloatingLabel">

            <EditText
                style="@style/BoardingEditText"
                android:hint="@string/email"
                android:textCursorDrawable="@null" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/StyledTilEditTextLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_gravity="center"
            app:hintTextAppearance="@style/BoardingEditTextFloatingLabel">

            <EditText
                style="@style/BoardingEditText"
                android:hint="@string/password"
                android:textCursorDrawable="@null" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_standard"
            android:background="@drawable/signup_button"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="12sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginTop="@dimen/margin_standard">

        <View
            android:id="@+id/divider_left"
            android:layout_width="140dp"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:background="@color/light_grey1"/>

         <TextView
             android:id="@+id/divider_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:textSize="13sp"
             android:textColor="@color/grey"
             android:includeFontPadding="false"
             android:text="or"/>

            <View
                android:layout_alignParentRight="true"
                android:layout_width="140dp"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:background="@color/light_grey1"/>

        </RelativeLayout>

        <Button
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_standard"
            android:background="@drawable/facebook_button"
            android:text="@string/facebook"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_standard"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/already_text"
            style="@style/BoardingDescrption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.05"
            android:text="@string/already_account" />

        <TextView
            style="@style/BoardingSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/already_text"
            android:text="@string/log_in" />

    </RelativeLayout>
</RelativeLayout>